Pygame/Rust/snakin/target/debug/build/crossbeam-utils-82e18917ef1dba30/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/9eb3afe9ebe9c7d2b84b71002d44f4a0edac95e0\library\core\src\sync\atomic.rs:2797:1
 ::: /rustc/9eb3afe9ebe9c7d2b84b71002d44f4a0edac95e0\library\core\src\sync\atomic.rs:2815:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
